# UBB-INFO

./: 1st Semester  2nd Semester
1st Semester/Fundamentele Programarii/: binary_search.py  dynamic programming.py  quicksort.py
1st Semester/Fundamentele Programarii/ExamenPractic/: filtrate.txt  main.py  nuconteaza.txt
1st Semester/Fundamentele Programarii/ExamenPractic/errors/: errors.py
1st Semester/Fundamentele Programarii/ExamenPractic/repository/: repo_spectacole.py
1st Semester/Fundamentele Programarii/ExamenPractic/tests/: fisier_de_test.txt  test_repo.py
1st Semester/Fundamentele Programarii/ExamenPractic/ui/: ui.py
1st Semester/Fundamentele Programarii/Laboratoare/Lab_2/: Problema_lab2.py
1st Semester/Fundamentele Programarii/Laboratoare/Lab_3/: Problema_lab3.py  Scenarii rulare testare.docx
1st Semester/Fundamentele Programarii/Laboratoare/Lab_4-6/: Documentatie.docx  domain.py  main.py  tests.py  ui.py  uinou.py
1st Semester/Fundamentele Programarii/Laboratoare/Lab_7-9+10/: Documentatie Lab7-9.docx  application_coordinator.py  disciplina.txt  disciplinaTest.txt  errors.py  gradesTest.txt  main.py  parsers.py  student.txt  studentTest.txt  ui.py  uiCuClasa.py
1st Semester/Fundamentele Programarii/simulareFp/: ui.py
1st Semester/Fundamentele Programarii/simulareFp/domain/: statistica.py
1st Semester/Fundamentele Programarii/simulareFp/teste/: test_repo.py
1st Semester/Fundamentele Programarii/simulareFp/validators/: validator_statistica.py
2nd Semester/Algoritmica Grafelor/: Test1Laborator.docx
2nd Semester/Porgramare Orientata Obiect/ExamenPractic/: CMakeLists.txt  Gui.h  Parcare.cpp  Parcare.h  Repository.cpp  Repository.h  Service.cpp  Service.h  TableModel.h  main.cpp  teste.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab10-14_OOP/: ActiuneUndo.h  CMakeLists.txt  CosCRUDGUI.h  CosCumparaturi.cpp  CosCumparaturi.h  CosReadOnlyGUI.h  FileRepository.cpp  FileRepository.h  ProdusTableModel.h  UndoModifica.h  UndoSterge.h  gui.cpp  gui.h  main.cpp  observer.h  produs.h  repo.cpp  repo.h  service.cpp  service.h  ui.cpp  validator.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab10-14_OOP/teste/: teste_cos.cpp  teste_cos.h  teste_filerepo.cpp  teste_repo.cpp  teste_service.cpp
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab2_OOP/: CMakeLists.txt  main.c
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab2_OOP/controller/: service.c  service.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab2_OOP/domain/: medicament.c  medicament.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab2_OOP/repository/: repository.c  repository.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab2_OOP/teste/: teste.c  teste.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab2_OOP/ui/: ui.c  ui.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab2_OOP/validator/: validator.c  validator.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab5_OOP/: CMakeLists.txt  main.c
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab5_OOP/Domain/: Car.c  Car.h  CarValidator.c  CarValidator.h  Tests1.c  Tests1.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab5_OOP/Repository/: Repository.c  Repository.h  Tests2.c  Tests2.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab5_OOP/Service/: Service.c  Service.h  Tests3.c  Tests3.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab5_OOP/UI/: UI.c  UI.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab5_OOP/Vector/: Tests4.c  Tests4.h  Vector.c  Vector.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab6_OOP/: ui.h  (+10 more)
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab7_OOP/: CMakeLists.txt  VectorDinamic.cpp  VectorDinamic.h  main.cpp  produs.h  repo.cpp  repo.h  service.cpp  service.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab7_OOP/teste/: teste_produs.cpp  teste_produs.h  teste_repo.cpp  teste_service.cpp
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab8-9_OOP/: CMakeLists.txt  CosCumparaturi.cpp  CosCumparaturi.h  FileRepository.h  UndoAdauga.h  main.cpp  obiecftDTO.h  produs.cpp  produs.h  repo.cpp  service.cpp  service.h  ui.h
2nd Semester/Porgramare Orientata Obiect/Laboratoare/Lab8-9_OOP/teste/: teste_filerepo.h  teste_produs.cpp  teste_produs.h  teste_repo.cpp  teste_repo.h  teste_service.cpp  teste_service.h  teste_validator.cpp
2nd Semester/Porgramare Orientata Obiect/Simulare examen laborator/: CMakeLists.txt  Gui.cpp  Gui.h  Imbracaminte.cpp  Imbracaminte.h  Repository.cpp  Repository.h  Service.cpp  Service.h  Teste.cpp  Teste.h  main.cpp
2nd Semester/Sisteme Dinamice/Laboratoare/: LAB4_SD.mw  LAB5_SD.mw  LAB6_SD.mw  Lab1.mw  Lab2_SD.mw  Lab3_SD.mw
2nd Semester/Structuri de date si algoritmi/Laboratoare/LAB7_SDA/: CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestScurt.cpp
2nd Semester/Structuri de date si algoritmi/Laboratoare/Lab1_SDA/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
2nd Semester/Structuri de date si algoritmi/Laboratoare/Lab6_SDA/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp  TestScurt.h
Fundamentele Programarii/: mergesort.py
Fundamentele Programarii/ExamenPractic/: nuconteaza2.txt  spectacole.txt
Fundamentele Programarii/ExamenPractic/business/: service_spectacole.py
Fundamentele Programarii/ExamenPractic/domain/: spectacol.py
Fundamentele Programarii/ExamenPractic/tests/: test_domain.py  test_service.py  test_validator.py
Fundamentele Programarii/ExamenPractic/validator/: validator_spectacole.py
Fundamentele Programarii/simulareFp/: main.py  statistici.txt
Fundamentele Programarii/simulareFp/business/: service_statistici.py
Fundamentele Programarii/simulareFp/errors/: errors.py
Fundamentele Programarii/simulareFp/repo/: repo_statistici.py
Fundamentele Programarii/simulareFp/teste/: test_domain.py  test_service.py
(+44 files in other folders)
