cmake_minimum_required(VERSION 4.0)
project(LAB7_SDA)

set(CMAKE_CXX_STANDARD 20)

add_executable(LAB7_SDA
        Colectie.cpp
        Colectie.h
        IteratorColectie.cpp
        IteratorColectie.h
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h
        App.cpp)
