cmake_minimum_required(VERSION 3.29)
project(Lab1_SDA)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab1_SDA
        IteratorColectie.cpp
        IteratorColectie.h
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h
        Colectie.cpp
        Colectie.h
        App.cpp)
