cmake_minimum_required(VERSION 3.30)
project(Lab6_SDA)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab6_SDA
        Colectie.cpp
        Colectie.h
        IteratorColectie.cpp
        IteratorColectie.h
        TestExtins.cpp
        TestScurt.cpp
        TestScurt.h
        TestExtins.h
        App.cpp)
